@@ -53,8 +53,8 @@
 
 #define UBUF_HSIZE 12                           /* 12 bytes for the header */
 #define UBUF_SPACE 1024			        /* maximum standard payload. */
-#define UBUF_MAXSPACE 4096                      /* maximum payload supported by server */
-#define DEFAULT_SPACE 1500-20-8-12		/* Max packet size for standard 1500 mtu ethernet */
+#define UBUF_MAXSPACE 4380                      /* maximum payload supported by server */
+#define DEFAULT_SPACE 1492-20-8-12		/* Max packet size for standard 1500 mtu ethernet */
 
 #define NBSIZE (UBUF_MAXSPACE+UBUF_SPACE)
 
